# deepdive

./: .gitignore  CMakeLists.txt  README.md
deepdive/: .classpath  deepdive.nja
deepdive/conll/: .model.txt.swp  datamodel.cfg  extractor.cfg  models  pipeline.cfg
deepdive/conll/.svn/: all-wcprops  entries
deepdive/conll/.svn/text-base/: datamodel.cfg.svn-base  extractor.cfg.svn-base  pipeline.cfg.svn-base
deepdive/conll/data/: a  do.py  model  model.txt  template_file  test  test_crfpp  train  train_crfpp
deepdive/conll/data/.svn/: all-wcprops  entries
deepdive/conll/data/.svn/text-base/: test.svn-base
deepdive/conll/exts/: conll.py
deepdive/conll/exts/.svn/: all-wcprops  entries
deepdive/conll/exts/.svn/text-base/: conll$py.class.svn-base  conll.py.svn-base
deepdive/lda/: main.py  main.py~
deepdive/lib/: constant.py  jeo.php  jeo.py
deepdive/mln/tuffy/main/: Main.java
deepdive/python/DStruct/: Factor.java  Relation.java
deepdive/python/Main/: BridgeToElly.java  Main.java
deepdive/python/Utils/: Config.java  DB.java  INIParser.java
deepdive/src/DStruct/: Extractor.java  Relation.java  VariableGroup.java
deepdive/src/Main/: BridgeToElly.java  ElementaryInterface.java  Main.java
deepdive/src/common/: Elementary.java
deepdive/src/lda/Main/: Main.java
deepdive/src/lda/Utils/: CommandOptions.java
deepdive/src/python/DStruct/: Extractor.java  Factor.java  Relation.java  VariableGroup.java
deepdive/src/python/Main/: BridgeToElly.java  ElementaryInterface.java  Main.java
deepdive/src/python/Utils/: CommandOptions.java  Config.java  DB.java  INIParser.java
deepdive/src/sql/main/: Main.java  SQLCommandOptions.java
deepdive/src/tuffy/db/: RDB.java
deepdive/src/tuffy/util/: ExceptionMan.java
elementary/: CMakeLists.txt  README.md  elementary.kdev4
elementary/src/: main.cpp  main.cpp~
elementary/src/adhoc/: factor_avg.cpp~  factor_avg.h  factor_booleandisjunction.h  factor_gaussian.h~  factor_join.h  factor_lda.cpp  factor_lda.h  factor_sum.h  factor_sum.h~  factor_valueconjunction.h  factorfactory.h  factorfactory.h~
elementary/src/common/: include.h  jobconfig.h  jobconfig.h~  timer.cpp  timer.h  types.h
elementary/src/fg/: factoraccessor.cpp  factoraccessor.h  factorgraph.cpp  factorgraph.cpp~  factorgraph.h  modelaccessor.cpp  modelaccessor.h  variable.cpp  variable.h  variablescanner.cpp  variablescanner.h
elementary/src/io/: buffer.cpp  buffer.h  driver.h  driver_file.cpp  driver_file.h  driver_hbase.cpp  driver_hbase.h  driver_mm.h  fixlenkv.cpp  fixlenkv.h  frame.cpp  frame.h  keyvaluestore.h  scanner.cpp  scanner.h  varlenkv.cpp  varlenkv.h
elementary/src/sampler/: discretegibbssampler.h  uniformmetropolishastings.h  uniformmetropolishastings.h~
elementary/test/: test.cpp  test.h
elementary/test/fg/: test_factoraccessor.h  test_factorgraph.h  test_factorgraph.h~  test_modelaccessor.h  test_variablescanner.h
elementary/test/io/: Driver_MM.h~  driver_file.h  driver_mm.h  test_buffer.h  test_driver_file.h  test_driver_hbase.h  test_fixlenkv.h  test_frame.h  test_scanner.h  test_varlenkv.h
elementary/test/prepare/: prepare.py
elementary/test/prepare/lda/: main.py
testdata/lda/: AP880212-0078  AP880213-0055  AP880213-0133  AP880213-0186  AP880216-0094  AP880216-0184  AP880216-0198  AP880217-0008  AP880217-0012  AP880217-0063  AP880217-0154  AP880217-0277  AP880218-0060  AP880218-0096  AP880219-0067  AP880219-0074  AP880219-0250  AP880220-0040  AP880220-0071  AP880220-0086  AP880220-0101  AP880221-0063  AP880222-0001  AP880222-0083  AP880222-0104  AP880222-0291  AP880223-0242  AP880224-0068  AP880224-0082  AP880224-0115  AP880224-0195  AP880224-0243  AP880225-0046  AP880225-0092  AP880225-0209  AP880225-0307  AP880226-0054  AP880226-0097  AP880226-0101  AP880226-0103  (+2203 more)
